--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/Akmal005/my-personal-website#readme",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "mongoose": "^6.6.2"
+    "express": "^4.18.2",
+    "firebase": "^9.6.11",
+    "mongoose": "^6.7.4"
   }
 }
